unpackaged/main/default/objects/Activity/fields/Activity__c.field-meta.xml
<CustomField>
	<fullName>Activity__c</fullName>
	<description>The Power of One</description>
	<formula>1</formula>
	<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	<label>Activity</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>