unpackaged/main/default/objects/Activity/fields/My_Activity_Number__c.field-meta.xml
<CustomField>
	<fullName>My_Activity_Number__c</fullName>
	<label>My Activity Number</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>