unpackaged/main/default/objects/Activity/fields/My_Activity_Test_Field__c.field-meta.xml
<CustomField>
	<fullName>My_Activity_Test_Field__c</fullName>
	<label>My Activity Test Field</label>
	<length>55</length>
	<type>Text</type>
</CustomField>