unpackaged/main/default/objects/Activity/fields/Validation_Rule_Test__c.field-meta.xml
<CustomField>
	<fullName>Validation_Rule_Test__c</fullName>
	<description>Validation Rule Formula Logic Test</description>
	<formula>CreatedDate &gt; NOW()</formula>
	<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	<label>Validation Rule Test</label>
	<type>Checkbox</type>
</CustomField>