unpackaged/main/default/objects/Activity/listViews/MyTeamsActivities.listView-meta.xml
<ListView>
	<fullName>MyTeamsActivities</fullName>
	<filterScope>Team</filterScope>
	<label>My Team&apos;s Activities</label>
</ListView>